--- a/Site.html
+++ b/Site.html
@@ -16,16 +16,18 @@
     </section>
     <section class="hidden">
         <p>Build from scratch.</p>
-        <h5>We used machine learning to train our AI to become smarter than you</h5>
-        <video width="394" height="700" autoplay muted loop>
+        <h5>Using PyGame, our AI learned through <br>multiple generations and became <br>smarter than you</h5>
+        <video width="18%" height="49.8%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
     </section>
     <section class="hidden">
-        <p>Download file here</p>
+        <p>About us</p>
+        <h5>We are three students that wanted to learn <br> more about AI. Our goal was to create a <br>chess opponent that could win from us.</h5>
     </section>
     <section class="hidden">
-        <p>You can contact us at the following adress:</p>
+        <p>Think you can win?</p>
+        <h5>Download the zip file here</h5>
     </section>
     <script src="vanilla-tilt.min.js"></script>
     <script src="Site.js"></script>
