--- a/Site.html
+++ b/Site.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 <head>
+    <title>Download our chess AI</title>
     <link rel="stylesheet" href="Site.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1085219978648764437/1087346802493227048/87555_grey_1042x1042.png">
 </head>
 <body>
-    
     <div id="blur"></div>
     <div id="blob"></div>
     <section>
@@ -16,7 +18,7 @@
     </section>
     <section class="hidden">
         <p>Build from scratch.</p>
-        <h5>Using PyGame, our AI learned through <br>multiple generations and became <br>smarter than you</h5>
+        <h5>Using PyGame, our AI learned to play <br>chess through multiple generations <br>and became smarter than you</h5>
         <video width="18%" height="49.8%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
@@ -28,8 +30,8 @@
     <section class="hidden">
         <p>Think you can win?</p>
         <h5>Download the zip file here</h5>
+        <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip</button>
     </section>
-    <script src="vanilla-tilt.min.js"></script>
     <script src="Site.js"></script>
 </body>
 </html>
