--- a/Site.html
+++ b/Site.html
@@ -20,7 +20,7 @@
     <section class="hidden">
         <p>Build from scratch.</p>
         <h5>Using PyGame, our AI learned to play <br>chess through multiple generations <br>and became smarter than you</h5>
-        <video width="18%" height="49.8%" autoplay muted loop>
+        <video height="49.8%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
     </section>
@@ -33,7 +33,6 @@
         <h5>Download the zip file here</h5>
         <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip</button>
         <a href="#top"><button class="button2"><span class="material-symbols-outlined">keyboard_double_arrow_up</span></button></a>
-        
     </section>
     <script src="Site.js"></script>
 </body>
