--- a/Site.html
+++ b/Site.html
@@ -4,8 +4,8 @@
     <title>Download our chess AI</title>
     <link rel="stylesheet" href="Site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/1085219978648764437/1087346802493227048/87555_grey_1042x1042.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1085219978648764437/1087346802493227048/87555_grey_1042x1042.png">
 </head>
 <body>
     <div id="blur"></div>
@@ -20,7 +20,7 @@
     <section class="hidden">
         <p>Build from scratch.</p>
         <h5>Using PyGame, our AI learned to play <br>chess through multiple generations <br>and became smarter than you</h5>
-        <video height="49.8%" autoplay muted loop>
+        <video height="50%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
     </section>
@@ -32,8 +32,10 @@
         <p>Think you can win?</p>
         <h5>Download the zip file here</h5>
         <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip</button>
-        <a href="#top"><button class="button2"><span class="material-symbols-outlined">keyboard_double_arrow_up</span></button></a>
     </section>
+    <a href="#top">
+        <button class="button2"><span class="material-symbols-outlined">keyboard_double_arrow_up</span></button>
+    </a>
     <script src="Site.js"></script>
 </body>
 </html>
