--- a/Site.html
+++ b/Site.html
@@ -18,19 +18,23 @@
         </span>
     </section>
     <section class="hidden">
+        <p>Introducing VitusAI</p>
+        <h5>Our own open source chess bot. </h5>
+    </section>
+    <section class="hidden">
         <p>Build from scratch.</p>
-        <h5>Using PyGame, our AI learned to play <br>chess through multiple generations <br>and became smarter than you</h5>
+        <h5>Using PyGame, our AI learned to play chess through multiple generations and became smarter than you</h5>
         <video height="50%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
     </section>
     <section class="hidden">
         <p>About us</p>
-        <h5>We are three students that wanted to learn <br> more about AI. Our goal was to create a <br>chess opponent that could win from us.</h5>
+        <h5>We are three students that wanted to learn more about AI. Our goal was to create a chess opponent that could win from us.</h5>
     </section>
     <section class="hidden">
         <p>Think you can win?</p>
-        <h5>Download the zip file here</h5>
+        <h5>With multiple rating options you can create a fair match. You can download the zip file below</h5>
         <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip</button>
     </section>
     <a href="#top">
