--- a/Site.html
+++ b/Site.html
@@ -19,7 +19,7 @@
     </section>
     <section class="hidden">
         <p>Introducing VitusAI</p>
-        <h5>Our own open source chess bot. </h5>
+        <h5>Our very own chess bot. </h5>
     </section>
     <section class="hidden">
         <p>Build from scratch.</p>
@@ -35,7 +35,7 @@
     <section class="hidden">
         <p>Think you can win?</p>
         <h5>With multiple rating options you can create a fair match. You can download the zip file below</h5>
-        <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip</button>
+        <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip (... kb)</button>
     </section>
     <a href="#top">
         <button class="button2"><span class="material-symbols-outlined">keyboard_double_arrow_up</span></button>
