--- a/Site.html
+++ b/Site.html
@@ -29,6 +29,23 @@
         </video>
     </section>
     <section class="hidden">
+        <div>
+            <p>How we made it</p>
+        </div>
+        <div class="card"><h5>We started by making an empty chess board, then adding the pieces, creating the rules and finaly started making our AI.</h5></div>
+        <div class="logos">
+            <div class="logo hidden">
+                <img src="https://cdn.discordapp.com/attachments/1085219978648764437/1093808198986768474/Empty6.png">
+            </div>
+            <div class="logo hidden">
+                <img src="https://cdn.discordapp.com/attachments/1085219978648764437/1093808198785445908/Empty7.png">
+            </div>
+            <div class="logo hidden">
+                <img src="https://cdn.discordapp.com/attachments/583559468714033162/1093812450194903080/Empty9.png">
+            </div>
+        </div>
+    </section>
+    <section class="hidden">
         <p>About us</p>
         <h5>We are three students that wanted to learn more about AI. Our goal was to create a chess opponent that could win from us.</h5>
     </section>
