--- a/Site.html
+++ b/Site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 <head>
-    <title>Download our chess AI</title>
+    <title>Download onze AI</title>
     <link rel="stylesheet" href="Site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,200" />
@@ -11,34 +11,34 @@
     <div id="blur"></div>
     <div id="blob"></div>
     <section>
-        <h1>LET'S PLAY CHESS</h1>
-        <h2>AGAINST OUR AI</h2>
+        <h1>LATEN WE SCHAKEN</h1>
+        <h2>TEGEN ONZE AI</h2>
         <span class="scroll-icon">
             <span class="scroll-icon__dot"></span>
         </span>
     </section>
     <section class="hidden">
-        <p>Introducing VitusAI</p>
-        <h5>Our very own chess bot. </h5>
+        <p>Wij presenteren: VitusAI</p>
+        <h5>Ontdek de kracht van onze schaak AI die uitdagende tegenstand biedt en spelers van elk niveau uitdaagt.</h5>
     </section>
     <section class="hidden">
-        <p>Build from scratch.</p>
-        <h5>Using PyGame, our AI learned to play chess through multiple generations and became smarter than you</h5>
+        <p>Van start naar einde</p>
+        <h5>Hebben we dit project zelf ontwikkeld. We hebben PyGame gebruikt om onze AI te leren schaken. Door meerdere generaties heeft het geleerd te spelen.</h5>
         <video height="50%" autoplay muted loop>
             <source src="https://cdn.discordapp.com/attachments/1085219978648764437/1085578171891593297/chessVideo.mp4" type="video/mp4">
         </video>
     </section>
     <section class="hidden">
         <div>
-            <p>How we made it</p>
+            <p>Hoe we het gemaakt hebben</p>
         </div>
-        <div class="card"><h5>We started by making an empty chess board, then adding the pieces, creating the rules and finaly started making our AI.</h5></div>
+        <div class="card"><h5>We zijn begonnen met een bord te maken, om vervolgens de schaakstukken erop te projecteren. Na de schaakregels, hebben we de AI ontwikkeld.</h5></div>
         <div class="logos">
             <div class="logo hidden">
                 <img src="https://cdn.discordapp.com/attachments/1085219978648764437/1093808198986768474/Empty6.png">
             </div>
             <div class="logo hidden">
-                <img src="https://cdn.discordapp.com/attachments/1085219978648764437/1093808198785445908/Empty7.png">
+                <img src="https://cdn.discordapp.com/attachments/583559468714033162/1093845575981600788/Empty10.png">
             </div>
             <div class="logo hidden">
                 <img src="https://cdn.discordapp.com/attachments/583559468714033162/1093812450194903080/Empty9.png">
@@ -46,12 +46,12 @@
         </div>
     </section>
     <section class="hidden">
-        <p>About us</p>
-        <h5>We are three students that wanted to learn more about AI. Our goal was to create a chess opponent that could win from us.</h5>
+        <p>Over ons</p>
+        <h5>We hebben deze AI gemaakt voor ons profielwerkstuk. Met z'n drieën hadden we totaal 240 uur om het te ontwikkelen.</h5>
     </section>
     <section class="hidden">
-        <p>Think you can win?</p>
-        <h5>With multiple rating options you can create a fair match. You can download the zip file below</h5>
+        <p>Denk je dat je kan winnen?</p>
+        <h5>Met meerdere niveaus kan je een eerlijke wedstrijd voor jezelf starten. Download hieronder.</h5>
         <button onclick="window.open('InfSite-main.zip')" class="custom-btn button1"><i class="fa fa-download"></i> Zip (... kb)</button>
     </section>
     <a href="#top">
